testing product page

--- a/views/gallery.ejs
+++ b/views/gallery.ejs
@@ -17,6 +17,8 @@
     <li>Table</li>
 </ul>
 
+<a href="/product">Go to product</a>
+
 <div>
     <form action="/add-product" method="post">
         <div>Name<input type="text" name="name" /></div>
